2009-10-14  Dan Fandrich <dan@coneharvesters.com>

	* Changed the various functions searching for tags in ExifTagTable[]
	  to use a binary search. This single change increases the speed of
	  a run through the libexif-testsuite by 7%

2009-10-13  Dan Fandrich <dan@coneharvesters.com>

	* po/sv.po: Updated Swedish translation by Daniel Nylander
	* po/vi.po: Updated Vietnamese translation by Clytie Siddall
	* Fixed an inverted logic condition that prevented the bug
	  report address from appearing in the .pot file
	* Ensure that ExifTagTable[] is sorted by tag to allow for future
	  more efficient searching.

2009-10-09  Dan Fandrich <dan@coneharvesters.com>

	* Released 0.6.18

2009-10-09  Dan Fandrich <dan@coneharvesters.com>

	* po/sr.po: Added Serbian translation by Marko Uskokovic
	* po/pt_BR.po: Added Portuguese (Brazil) translation by André Gondi

2009-10-08  Dan Fandrich <dan@coneharvesters.com>

	* Demoted from EXIF_LOG_CODE_CORRUPT_DATA to EXIF_LOG_CODE_DEBUG the
	  MakerNote log messages that would result if a MakerNote were
	  rewritten by an application without rebasing the internal data
	  offsets.  The exif front end (at least) aborts processing if
	  such a log message is found, but these kinds of errors are
	  far too common (and practically unavoidable) to handle them
	  this way.

2009-10-06  Dan Fandrich <dan@coneharvesters.com>

	* Added --enable-maintainer-mode in configure and made the SourceForge
	  logo appear in the Doxygen documentation only when it's enabled.

2009-10-05  Dan Fandrich <dan@coneharvesters.com>

	* Updated translations from Translation Project members to the
	  latest & hopefully final .pot file before release

2009-10-01  Dan Fandrich <dan@coneharvesters.com>

	* Bumped the library minor version number because of the addition
	  of exif_loader_get_buf()
	* Added exif.h to the source tarball so users can generate full
	  Doxygen documentation.

2009-09-30  Dan Fandrich <dan@coneharvesters.com>
